# five

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: bitops.rs  bus.rs  cpu.rs  emulator.rs  isa.rs  lib.rs  memory.rs
src/cpu/: decoder.rs  pc.rs  register.rs
src/emulator/: bus.rs  cpu.rs  memory.rs
src/emulator/bus/: memory.rs
src/emulator/cpu/: csr.rs  decoder.rs  executor.rs  f.rs  pc.rs  trap_handler.rs  x.rs
src/emulator/cpu/csr/: machine_level.rs  supervisor_level.rs  user_level.rs
src/emulator/cpu/decoder/: privileged.rs  rv32f.rs  rv32i.rs  rv32m.rs  rv64f.rs  rv64i.rs  rv64m.rs  zicsr.rs  zifencei.rs
src/emulator/cpu/executor/: privileged.rs  rv32f.rs  rv32i.rs  rv32m.rs  rv64f.rs  rv64i.rs  rv64m.rs  zicsr.rs  zifencei.rs
src/isa/: csr.rs  description.rs  exception.rs  extension.rs  instruction.rs  interrupt.rs  privileged.rs  register.rs
src/isa/csr/: machine_level.rs  status.rs  supervisor_level.rs  user_level.rs
src/isa/description/: privileged.rs  rv32f.rs  rv32i.rs  rv32m.rs  rv64f.rs  rv64i.rs  rv64m.rs  zicsr.rs  zifencei.rs
src/isa/instruction/: privileged.rs  rv32f.rs  rv32i.rs  rv32m.rs  rv64f.rs  rv64i.rs  rv64m.rs  zicsr.rs  zifencei.rs
src/isa/privileged/: cause.rs  mode.rs
tests/: instruction.rs
