[package]
name = "cli"
version = "0.1.0"
authors = ["plavelo <plastic.velocity@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
five = { package = "five", path = "../" }
clap = { version = "4.0.32", features = ["derive"] }
